# pantavisor

./: .clang-tidy  .dev-progress.md  .editorconfig  .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONFIGURATION.md  DISKS.md  GEMINI.md  INGRESS.md  IPAM.md  LICENSE  Makefile  NOTICE  PLATFORM-FUTURE.md  PLATFORM.md  README.md  ROADMAP.md  RPIAB.md  addons.c  addons.h  apparmor.c  apparmor.h  atom.mk  blkid.c  blkid.h  bootloader.c  bootloader.h  buffer.c  buffer.h  cgroup.c  cgroup.h  cmd.c  cmd.h  condition.c  condition.h  config.c  config.h  (+116 more)
.github/: machines.json
CHANGELOG/: CHANGELOG-029.md
appengine/: cmdline.txt.in  pantavisor.config.in  pv-appengine-tester_run-test.in  pv-appengine-tester_utils  pv-appengine.in  run-interactive.sh.in  set-env.in  state.rev0.json
boot/: pvkboot
configs/: resolv.conf
ctrl/: buildinfo_ctrl.c  buildinfo_ep.c  ctrl.c  ctrl.h  ctrl_buildinfo_ep.c  ctrl_callback.c  ctrl_callback.h  ctrl_caller.c  ctrl_caller.h  ctrl_cmd.c  ctrl_cmd.h  ctrl_commands_ep.c  ctrl_config_ep.c  ctrl_containers_ep.c  ctrl_daemons_ep.c  ctrl_devicemeta_ep.c  ctrl_devmeta_ep.c  ctrl_download.c  ctrl_download.h  ctrl_drivers_ep.c  ctrl_endpoints.h  ctrl_file.c  ctrl_file.h  ctrl_groups_ep.c  ctrl_handler.h  ctrl_indata.c  ctrl_indata.h  ctrl_indata_right_solution.c  ctrl_objects_ep.c  ctrl_outdata.c  ctrl_outdata.h  ctrl_sender.c  ctrl_sender.h  ctrl_signal_ep.c  ctrl_steps_ep.c  ctrl_storage_ep.c  ctrl_upload.c  ctrl_upload.h  ctrl_usermeta_ep.c  ctrl_usrmeta_ep.c  (+19 more)
defaults/: groups.json  pantahub.config  pantavisor.config
disk/: disk.c  disk.h  disk_crypt.c  disk_dir.c  disk_dual.c  disk_impl.h  disk_swap.c  disk_utils.c  disk_utils.h  disk_volume.c  disk_volume.h  disk_volume_bind.c  disk_zram.c  disk_zram_utils.c  disk_zram_utils.h
docs/: index.md  issues.md
embedded/: pantavisor.config.in
etc/: passwd  subuid
event/: event.c  event.h  event_http_server.c  event_http_server.h  event_periodic.c  event_periodic.h  event_rest.c  event_rest.h  event_socket.c  event_socket.h  event_timer.c  event_timer.h
hook/: hooks.c  hooks.h
logserver/: logserver.c  logserver.h  logserver_compress.c  logserver_compress.h  logserver_filetree.c  logserver_filetree.h  logserver_null.c  logserver_null.h  logserver_out.c  logserver_out.h  logserver_phlogger.c  logserver_phlogger.h  logserver_rotation.c  logserver_rotation.h  logserver_singlefile.c  logserver_singlefile.h  logserver_stdout.c  (+7 more)
plugins/: CMakeLists.txt  README.pv_lxccli.md  pv_lxc.c  pv_lxc.h  pv_lxccli.c  pv_lxccli.h  pv_mcu.c  pv_mcu.h  pv_pvcm.c  pv_runc.c  pv_runc.h  pv_runc_container_status.c  pv_runc_container_status.h  pv_wasmedge.c  pv_wasmedge.h
pv-devicepass/: CMakeLists.txt  agent-ops.c  agent-ops.h  ctrl-client.c  ctrl-client.h  ethsign.c  keccak256sum.c  proxy.c  proxy.h  pv-devicepass.c  tunnel.c  tunnel.h
pv-devicepass/contracts/script/: Claim.s.sol  Deploy.s.sol
pv-devicepass/contracts/src/: DevicePassRegistry.sol
pv-devicepass/contracts/test/: DevicePassRegistry.t.sol
pv-devicepass/scripts/: devicepass-cli  test-e2e-guardian-bound.sh
pv-devicepass/scripts/lib/: config.sh  display.sh  identity.sh  signing.sh
pv-devicepass/scripts/lib/guardian/: balance.sh  claim.sh  common.sh  deploy.sh  fund.sh  list.sh  revoke.sh  status.sh  transfer.sh
pvcm-proxy/: CMakeLists.txt  README.md  main.c  pvcm_bridge.c  pvcm_bridge.h  pvcm_config.c  pvcm_config.h  pvcm_dbus_bridge.c  pvcm_dbus_bridge.h  pvcm_protocol.c  pvcm_protocol.h  pvcm_transport.h  pvcm_transport_rpmsg.c  pvcm_transport_uart.c
pvcm-proxy/test/: run-native-test.sh
pvcm-run/: CMakeLists.txt  README.md  main.c  pvcm_bridge.c  pvcm_bridge.h  pvcm_config.c  pvcm_config.h  pvcm_dbus_bridge.c  pvcm_dbus_bridge.h  pvcm_fs_bridge.c  pvcm_fs_bridge.h  pvcm_protocol.c  pvcm_protocol.h  pvcm_sendq.c  pvcm_transport.h  pvcm_transport_rpmsg.c  pvcm_transport_uart.c
pvcm-run/test/: run-native-test.sh  test_dbus_service.py  test_http_server.py
pvtx/: CMakeLists.txt  pvtx.c  pvtx_buffer.c  pvtx_buffer.h  pvtx_ctrl.c  pvtx_ctrl.h  pvtx_error.c  pvtx_error.h  pvtx_jsmn_utils.c  pvtx_jsmn_utils.h  pvtx_state.c  pvtx_state.h  pvtx_tar.c  pvtx_tar.h  pvtx_tar_formats.c  pvtx_tar_impl.h  pvtx_txn.c  pvtx_txn.h
pvtx/include/pvtx/: error.h  txn.h
pvtx/pvtx_utils/: base64.c  base64.h  jsmn.c  jsmn.h  sha256-internal.c
pvtx/src/: pvtx.c  pvtx_buffer.c  pvtx_buffer.h  pvtx_ctrl.c  pvtx_ctrl.h  pvtx_error.c  pvtx_jsmn_utils.h  pvtx_state.c  pvtx_state.h  pvtx_tar.c  pvtx_tar.h  pvtx_tar_formats.c  pvtx_txn.c
pvtx/src/pvtx_utils/: base64.c  sha256-internal.c  sha256_i.h
sdk/zephyr/samples/pvcm-shell/: CMakeLists.txt  prj.conf
sdk/zephyr/samples/pvcm-shell/boards/: mimx8mn_evk.conf  native_posix_64.conf  native_sim_64.conf
sdk/zephyr/samples/pvcm-shell/src/: main.c  shell_rpmsg.c  shell_rpmsg.h
test/pvtx/: CMakeLists.txt  pvtx.sh
test/pvtx/expected/: state-empty.json  state_after_add_from_tar.json  state_after_adding_existing.json  state_after_install_config_b_remove_config_a.json  state_after_install_config_b_remove_config_a_with_glob.json  state_after_new_package.json  state_after_os_install.json  state_after_pvwificonnect.json  state_after_remove.json  state_after_remove_config_pkg.json  state_bsp_update.json  state_pvws_with_config.json  state_pvws_without_config.json  state_queue_process.json
test/pvtx/resources/: awconnect.json  bsp_init.json  bsp_init_groups.json  config_a.json  config_a_glob.json  config_b_glob.json  initial_state.json  pvwificonnect.tgz  state-1.json  state_with_spaces.json  vaultwarden.json  watchdog_pinger.tar
tools/dcp-blob-create/: CMakeLists.txt  dcp-blob-create.c
utils/: fs.c  (+49 more)
xconnect/: CMakeLists.txt  TCP-BACKEND.md  TODO.md  XCONNECT-INGRESS-DESIGN.md  XCONNECT.md  dbus_activation.c  dbus_activation.h  dbus_codec.c  dbus_codec.h  main.c  plumbing.c  services.c  services_bridge.c  services_bridge.h  services_nft.c  services_nft.h
xconnect/include/: xconnect.h
xconnect/plugins/: dbus.c  drm.c  http.c  proxy_common.c  proxy_common.h  rest.c  tcp.c  unix.c  wayland.c
(+221 files in other folders)
